ladspa: Fix critical during plugin load on Windows

https://bugzilla.gnome.org/show_bug.cgi?id=794611